# Computacion-Grafica_ProyectoFinal

./: CMakeLists.txt  Escanear.ply  Escanear.stl  Malla.stl  README.md  original.cpp
